Complete Chronos Markets implementation with Linera blockchain integration
- Implemented full prediction market smart contracts in Rust/WASM
- Built React 19 + TypeScript frontend with 6 pages
- Added WalletContext for blockchain connection
- Created chronosContract service layer for contract interactions
- Integrated AMM-based pricing mechanism
- Added comprehensive testing and integration guides
- Cleaned up codebase and documentation

Chain ID: 51804de22a3c25a48edbf5bdad4b3efe82fb1201b22e031c4e2a5be24f76288d
App ID: b891a74bfa28c13c2305ad493c1706defa3990a5f8fe239cf3b3963860250d4c

--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "linera:start": "bash start-linera.sh",
+    "linera:setup-wallet": "bash setup-wallet.sh",
+    "linera:service": "linera service --port 8080",
+    "linera:status": "linera wallet show && linera query-balance"
   },
   "dependencies": {
     "react": "^19.2.0",
