--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-router-dom": "^7.9.4",
     "recharts": "^3.3.0",
     "framer-motion": "^11.15.0",
-    "lucide-react": "^0.468.0"
+    "lucide-react": "^0.468.0",
+    "react-is": "^19.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
