--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,11 @@
         },
         {
           "key": "Cross-Origin-Embedder-Policy",
-          "value": "require-corp"
+          "value": "credentialless"
+        },
+        {
+          "key": "Content-Security-Policy",
+          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' 'wasm-unsafe-eval' blob:; style-src 'self' 'unsafe-inline'; img-src 'self' data: blob: https:; font-src 'self' data:; connect-src 'self' https://faucet.testnet-conway.linera.net wss: https:; worker-src 'self' blob:; child-src 'self' blob:;"
         }
       ]
     }
